# SQLpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: macros.h
lib/core/: conn.h  db.h  expr.h  macros.h  table.h  types.h
lib/queries/: base.h  delete.h  expression.h  insert.h  result.h  select.h  update.h
lib/queries/operations/: delete.h  insert.h  select.h  update.h
lib/table/: column.h  foreignkey.h  table.h
